[gd_scene load_steps=11 format=3 uid="uid://c0oa86ykcul02"]

[ext_resource type="Script" path="res://main.gd" id="1_noafd"]
[ext_resource type="PackedScene" uid="uid://cqo2mirv5pd7n" path="res://blueprints/spawner/spawner.tscn" id="2_d1sa7"]
[ext_resource type="PackedScene" uid="uid://ncr68fliw4r8" path="res://blueprints/targets/straight_target.tscn" id="3_2yduq"]
[ext_resource type="PackedScene" uid="uid://cpaw4k42b182w" path="res://blueprints/player/player.tscn" id="3_ppgdl"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_quvnu"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_5bwib"]
sky_material = SubResource("ProceduralSkyMaterial_quvnu")

[sub_resource type="Environment" id="Environment_blneg"]
background_mode = 2
sky = SubResource("Sky_5bwib")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxShape3D" id="BoxShape3D_oqy2u"]
size = Vector3(10, 0.1, 10)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_o1lgv"]
albedo_color = Color(0.194349, 0.194349, 0.194349, 1)

[sub_resource type="BoxMesh" id="BoxMesh_qsqcc"]
material = SubResource("StandardMaterial3D_o1lgv")
size = Vector3(10, 0.1, 10)

[node name="World" type="Node3D"]
script = ExtResource("1_noafd")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_blneg")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="Ground" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_oqy2u")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_qsqcc")

[node name="LeftStraightSpawner" parent="." instance=ExtResource("2_d1sa7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.56, 0.45)
target_scene = ExtResource("3_2yduq")
spawn_place = Vector3(-0.2, 0, -10)

[node name="RightStraightSpawner" parent="." instance=ExtResource("2_d1sa7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.56, 0.45)
target_scene = ExtResource("3_2yduq")
spawn_place = Vector3(0.2, 0, -10)
spawn_delay = 1.0

[node name="Player" parent="." instance=ExtResource("3_ppgdl")]

[node name="HitCounter" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.965926, -0.258819, 0, 0.258819, 0.965926, 0, 2.5, -4)
text = "Combo: 0"
font_size = 48

[node name="VelocityDisplay" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.965926, -0.258819, 0, 0.258819, 0.965926, 0, 2, -4)
text = "Hit velocity: 0.0"
font_size = 48

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.969965, 0)
current = true

[connection signal="hit_velocity" from="Player" to="." method="_on_player_hit_velocity"]
[connection signal="player_hit" from="Player" to="." method="_on_player_player_hit"]
[connection signal="target_hit" from="Player" to="." method="_on_player_target_hit"]
